Adds SPI template structure